# HalalDL

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_SIGNING_POLICY.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.cursor/rules/: code-structure.mdc  current-year-web-validation.mdc  node-22-only.mdc  process-stop-safety.mdc  verification-pnpm-check.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: nightly.yml  release.yml
.playwright-cli/: page-2026-03-20T20-42-44-698Z.yml
.trae/rules/: project_rules.md
docs/: 01-overview.md  02-architecture.md  03-ui.md  04-tools.md  05-settings-schema.md  06-packaging-lite-full.md  07-release-checklist.md  07-wiring.md  08-packaging.md  09-diagnostics-reliability-roadmap.md  10-app-update-architecture.md  11-distribution-and-trust-plan.md  12-growth-trust-and-v051-plan.md  RELEASE_TEMPLATE.md  github-launch-kit.md  plan.md  plan_history_enhancements.md  plan_video_features.md
docs/assets/releases/0.4.0/: README.md
docs/assets/releases/0.4.1/: README.md  generate-images.py
docs/assets/releases/0.5.0/: README.md
docs/releases/: v0.4.0-github.md  v0.4.0.md  v0.4.1-github.md  v0.4.1.md  v0.5.0-github.md  v0.5.0.md
scripts/: capture-release-promo.py  check-downloadgram-providers.mjs  package-portable.js  release-promo-server.cjs  rename-release.js  run-with-sccache.cjs  test-diagnostics-summary.mjs  test-history-copy-actions.mjs  test-log-actions.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  shell.json
src-tauri/src/: app_paths.rs  app_update.rs  clipboard.rs  diagnostics.rs  download.rs  extract.rs  file_commands.rs  fs_utils.rs  lib.rs  main.rs  notifications.rs  runtime.rs  shell.rs  tools.rs  version.rs
src/components/: GlobalDragDrop.tsx  PersistenceManager.tsx  PresetEditor.tsx  QuickDownloadPanel.tsx  Sidebar.tsx  ToolSuccessModal.tsx  UpgradePrompt.tsx
src/components/motion/: ListAnimations.tsx  MotionButton.tsx  PageTransition.tsx  StaggerContainer.tsx
src/components/persistence/: useApplyTheme.ts  useAutoSave.ts  usePersistenceInit.ts
src/components/tools/: ToolBatchSummary.tsx  ToolTransferStatus.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  slider.tsx  sonner.tsx  switch.tsx  tabs.tsx
src/hooks/: useTaskbarProgress.ts
src/lib/: app-paths.ts  attention.ts  clip.ts  commands.ts  demo-mode.ts  diagnostics-summary.ts  diagnostics.ts  downloader.ts  id.ts  job-templates.ts  notifications.ts  output-parser.ts  output-paths.ts  preset-display.ts  runtime-flags.ts  startup-metrics.ts  storage.ts  subtitles.ts  url-identity.ts
src/lib/app-updates/: service.ts
src/lib/commands/: app-update.ts  file-commands.ts  index.ts  runtime-commands.ts  tool-checks.ts  tool-commands.ts  version-utils.ts
src/lib/downloader/: archive.ts  core.ts  index.ts  instagram.ts  metadata.ts  thumbnails.ts  tool-env.ts  validation.ts
src/lib/media-engine/: downloadgram-providers.json  downloadgram.ts  index.ts
src/lib/tools/: app-mode.ts  local-tools.ts  tool-batch.ts
src/release-assets/: ReleasePromoBoard.tsx  releasePromoMode.ts
src/screens/: DownloadsScreen.tsx  HistoryScreen.tsx  LogsScreen.tsx  PresetsScreen.tsx  SettingsScreen.tsx  ToolsScreen.tsx
src/screens/downloads/: constants.ts  utils.ts
src/screens/downloads/components/: DownloadItem.tsx  (+5 more)
src/screens/history/: HistoryScreen.tsx  copy-actions.ts
src/screens/tools/: ToolsScreen.tsx  constants.ts
src/store/: app-update.ts  attention.ts  built-in-presets.ts  downloads.ts  history.ts  logs.ts  navigation.ts  presets.ts  runtime.ts  settings.ts  tools.ts
src/styles/: glass.css
(+25 files in other folders)
