[package]
name = "halaldl"
version = "0.5.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "halaldl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "halal_dl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "portable_updater"
path = "src/bin/portable_updater.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
zip = "8.4.0"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
indicator = "0.4.4"
tauri-plugin-process = "2.3.1"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.62.2", features = ["Data_Xml_Dom", "UI_Notifications", "Win32_Foundation", "Win32_System_Com"] }
winreg = "0.56.0"
sha2 = "0.10"
tauri-plugin-positioner = "2"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }

[target.'cfg(any(target_os = "macos", target_os = "linux", windows))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }

[profile.release]
lto = "thin"        # Fast Link Time Optimization (huge speedup vs true)
codegen-units = 16  # Maximize parallelism (uses all threads)
panic = "abort"     # Remove stack unwinding (smaller binary, faster build)
strip = true        # Strip symbols (smaller binary)
